--- a/src/assets/scss/admin/components/pages/_shift_schedule.scss
+++ b/src/assets/scss/admin/components/pages/_shift_schedule.scss
@@ -52,6 +52,10 @@
                 text-align: center;
                 position: relative;
 
+                &-wrapper {
+                    position: relative;
+                }
+
                 &-heading {
                     padding: 5px;
                     font-size: 18px;
